[project]
name = "zengcheng3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "scipy>=1.17.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "wandb>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reev_control*"]
